# STONAE_Plugin_Template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
plugin/: CMakeLists.txt
plugin/include/YourPluginName/: CustomMouseTracker.h  GUIConstants.h  Params.h  PluginEditor.h  PluginProcessor.h  TabbedComponent.h
plugin/source/: CustomMouseTracker.cpp  PluginEditor.cpp  PluginProcessor.cpp  magic.sav.xml
